# music-tool-bot

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .pylintrc  .wakatime-project  LICENSE  Makefile  Pipfile  README.md  TODOS  app.js  bot.py  config.js  database.py  db.json  dbconfig.py  docker-compose.dev.yaml  docker-compose.grafana.yaml  docker-compose.prod.yaml  docker-compose.yaml  env.py  language_service.py  package-lock.json  package.json  pyproject.toml  redisconfig.py  requirements.txt
config/: __init__.py  constants.py  database.py  envs.py  modules.py  pyi18n.py  telegram_bot.py
database/: __init__.py
database/migrations/: 2021_02_21_071812_create_users_table.py  2021_02_21_072008_create_admins_table.py  2021_02_26_103702_add_username_to_users_table.py  (+8 more)
docker/: Dockerfile  Dockerfile.dev  entrypoint.sh
i18n/: ar.yaml  en.yaml  es.yaml  fa.yaml  fr.yaml  hi.yaml  id.yaml  ru.yaml
migrations/: 2021_02_21_071812_create_users_table.py  2021_02_21_072008_create_admins_table.py  2021_02_26_103702_add_username_to_users_table.py
models/: admin.py  user.py
modules/: __init__.py  admin.py  bitrate_changer.py  core.py  cutter.py  donation.py  lyrics.py  tag_editor.py  voice_converter.py
my_modules/: album-arter.js  config.js  downloader.js
seeds/: make_owner_seeder.py  owner_seeder.py  owner_table_seeder.py
tests/unit/: .gitkeep  (+1 more)
utils/: __init__.py  context.py  convert_seconds_to_human_readable_form.py  create_user_directory.py  db.py  decorators.py  delete_file.py  downloader.py  formatting.py  fs.py  generate_music_info.py  i18n.py  increment_usage_counter_for_user.py  is_user_admin.py  is_user_owner.py  keyboard.py  lang.py  language_service.py  logging.py  misc.py  reset_user_data_context.py  save_text_into_tag.py
(+74 files in other folders)
