[project]
name = "music-tool-bot"
version = "2.5.0"
description = "The one and only bot you need to manage your music files"
readme = "README.md"
authors = [{ name = "Amir Hosein Salimi", email = "ahosein.salimi2@gmail.com" }]
license = { file = "LICENSE" }
keywords = ["python", "music", "telegram-bot", "python-telegram-bot", "tag-editor"]
